// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput Component displays error message when there is an error 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="relative"
    >
      <label
        class="block text-gray-700 mb-2"
        for="name"
      >
        Name
      </label>
      <input
        class="w-full h-[50px] bg-gray-50 px-5 py-2 pr-12 border ring-2 ring-red-500 rounded-xl focus:outline-none focus:ring-2 focus:ring-primaryLight transition duration-200 ease-in-out transform"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
      />
      <div
        class="absolute h-[50px] right-5 bottom-0 flex items-center"
      />
    </div>
    <p
      class="text-red-500 text-sm mt-1"
    >
      Name is required
    </p>
  </div>
</DocumentFragment>
`;

exports[`FormInput Component renders with an icon and calls onClickIcon when clicked 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="relative"
    >
      <label
        class="block text-gray-700 mb-2"
        for="password"
      >
        Password
      </label>
      <input
        class="w-full h-[50px] bg-gray-50 px-5 py-2 pr-12 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-primaryLight transition duration-200 ease-in-out transform"
        id="password"
        name="password"
        placeholder="Enter your password"
        type="password"
      />
      <div
        class="absolute h-[50px] right-5 bottom-0 flex items-center"
      >
        <span>
          Icon
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormInput Component renders without errors 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="relative"
    >
      <label
        class="block text-gray-700 mb-2"
        for="name"
      >
        Name
      </label>
      <input
        class="w-full h-[50px] bg-gray-50 px-5 py-2 pr-12 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-primaryLight transition duration-200 ease-in-out transform"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
      />
      <div
        class="absolute h-[50px] right-5 bottom-0 flex items-center"
      />
    </div>
  </div>
</DocumentFragment>
`;
